@@ -210,6 +210,9 @@ Release 2.5.0 - UNRELEASED
     MAPREDUCE-5886. Allow wordcount example job to accept multiple input paths.
     (cnauroth)
 
+    MAPREDUCE-5834. Increased test-timeouts in TestGridMixClasses to avoid
+    occassional failures. (Mit Desai via vinodkv)
+
   OPTIMIZATIONS
 
   BUG FIXES 
